--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,8 @@ expiration date when (time_t)-1 is specified as date.
 ** libgnutls: Corrected issue in record decompression. Issue pinpointed
 by Frank Zschockel.
 
+** libgnutls: Forbid all compression methods in DTLS.
+
 ** gnutls-serv: Fixed issue with IPv6 address in UDP mode.
 
 ** certtool: When exporting an encrypted PEM private key do not output the key
