--- a/NEWS
+++ b/NEWS
@@ -50,6 +50,9 @@ chokes on integer overflows. Suggested by Stefan Buehler.
 ** tools: The environment variable GNUTLS_PIN can be used to read any PIN
 requested from tokens.
 
+** tools: The installed version of libopts is used if the autogen tool is
+present.
+
 ** API and ABI modifications:
 gnutls_pkcs11_obj_export3: Added
 gnutls_pkcs11_get_raw_issuer: Added
