use eurosym package for euro symbol

--- a/doc/latex/epub.tex
+++ b/doc/latex/epub.tex
@@ -7,7 +7,7 @@
 \usepackage{hyperref}
 \usepackage{listings}
 \usepackage{verbatim}
-\usepackage[greek,english]{babel}%for euro sign
+\usepackage{eurosym}
 \usepackage{float}
 \usepackage{fancyvrb}
 \usepackage{framed}
