--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -17,8 +17,8 @@
 \usepackage{float}
 \usepackage{morefloats}
 \usepackage{quotchap}
+\usepackage{eurosym}
 %\usepackage[utf8]{inputenc}
-\usepackage[greek,english]{babel}%for euro sign
 
 \DeclareGraphicsExtensions{.pdf}
 
