--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,15 @@ Copyright (C) 2000-2012 Free Software Foundation, Inc.
 Copyright (C) 2013 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
+* Version 3.2.8 (unreleased)
+
+** certtool: The --verify option will use the system CAs if the
+load-ca-certificate option is not provided.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.2.7 (released 2013-11-23)
 
 ** libgnutls: gnutls_cipher_get_iv_size() now returns the correct IV size in
