--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.18 (unreleased)
+
+** libgnutls: Updated code for AES-NI. That prevents an uninitialized
+variable complaint from valgrind.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.1.17 (released 2013-11-23)
 
 ** libgnutls: Support for TPM via trousers is now enabled by default.
