--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,7 @@ See the end for copying conditions.
 variable complaint from valgrind.
 
 ** libgnutls: It only links to librt if the required functions are
-not present in libc.
+not present in libc. This also prevents an indirect linking to libpthread.
 
 ** certtool: The --verify option will use the system CAs if the
 load-ca-certificate option is not provided.
