--- a/NEWS
+++ b/NEWS
@@ -5,13 +5,13 @@ See the end for copying conditions.
 
 * Version 3.3.0 (unreleased)
 
+** libgnutls: The initialization of the library was moved to a
+constructor.
+
 ** libgnutls: gnutls_global_init2() was added to allow splitting
 initialization to a minimal part (which can be part of a library
 constructor) and the rest, which includes things that cannot be
 in a constructor such as the PKCS #11 initialization.
-
-* Added --disable-non-suiteb-curves option to configure. This option
-restricts the supported curves to SuiteB curves.
 
 ** libgnutls: Added --enable-fips140-mode configuration option. That
 option enables:
@@ -29,6 +29,9 @@ option enables:
    than ECRYPT).
 
 ** libgnutls: Depend on p11-kit 0.19.1 or later.
+
+* configure: Added --disable-non-suiteb-curves option. This option
+restricts the supported curves to SuiteB curves.
 
 ** API and ABI modifications:
 gnutls_privkey_generate: Added
