--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,8 @@ initialization to a minimal part (which can be part of a library
 constructor) and the rest, which includes things that cannot be
 in a constructor such as the PKCS #11 initialization.
 
+** libgnutls: DH parameter generation is now delegated to nettle.
+
 ** libgnutls: Added --enable-fips140-mode configuration option. That
 option enables:
  o FIPS-186-4 compliant DSA and DH key generation (using provable primes)
@@ -28,10 +30,10 @@ option enables:
  o Security levels are adjusted to the FIPS140-2 recommendations (rather
    than ECRYPT).
 
-** libgnutls: Depend on p11-kit 0.19.1 or later.
-
-* configure: Added --disable-non-suiteb-curves option. This option
+** libgnutls: Added --disable-non-suiteb-curves option. This option
 restricts the supported curves to SuiteB curves.
+
+** libgnutls: Depend on p11-kit 0.19.1 or later.
 
 ** API and ABI modifications:
 gnutls_privkey_generate: Added
