--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,8 @@ in a constructor such as the PKCS #11 initialization.
 
 ** libgnutls: DH parameter generation is now delegated to nettle.
 
+** libgnutls: Separated nonce RNG from the main RNG.
+
 ** libgnutls: Added --enable-fips140-mode configuration option. That
 option enables:
  o FIPS-186-4 compliant DSA and DH key generation (using provable primes)
