--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ See the end for copying conditions.
 ** libgnutls: Updated code for AES-NI. That prevents an uninitialized
 variable complaint from valgrind.
 
+** libgnutls: Added SSSE3 optimized SHA1, and SHA256, using Andy Polyakov's 
+assembly code.
+
 ** libgnutls: It only links to librt if the required functions are
 not present in libc. This also prevents an indirect linking to libpthread.
 
