--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ See the end for copying conditions.
 ** libgnutls: Updated code for AES-NI. That prevents an uninitialized
 variable complaint from valgrind.
 
+** libgnutls: Enforce a maximum size for DH primes.
+
 ** configure: Added option --with-default-blacklist-file to allow
 specifying a certificate blacklist file.
 
