--- a/NEWS
+++ b/NEWS
@@ -27,15 +27,15 @@ a fork is detected.
 
 ** libgnutls: Added --enable-fips140-mode configuration option. That
 option enables:
- o FIPS-186-4 compliant DSA and DH key generation (using provable primes)
- o The FIPS-140-2 compliant DRBG-AES deterministic random generator.
- o Self-tests on initialization on ciphers/MACs, public key algorithms and
-   random generator.
- o Initialization on library load (when GnuTLS is a shared library)
+ o DSA and DH key generation as in FIPS-186-4 (using provable primes)
+ o The DRBG-AES deterministic random generator from The ANSI X9.31 
+   Appendix A.2.4.
+ o Self-tests on initialization on ciphers/MACs, public key algorithms 
+   and the random generator.
  o MD5 is included for TLS purposed but cannot be used by the high level
    hashing functions.
  o All ciphers except AES are disabled.
- o All MACs and hashes except SHA are disabled (i.e., HMAC-MD5).
+ o All MACs and hashes except GCM and SHA are disabled (e.g., HMAC-MD5).
  o All keys (temporal and long term) are zeroized after use.
  o Security levels are adjusted to the FIPS140-2 recommendations (rather
    than ECRYPT).
