--- a/NEWS
+++ b/NEWS
@@ -32,6 +32,7 @@ option enables:
    Appendix A.2.4.
  o Self-tests on initialization on ciphers/MACs, public key algorithms 
    and the random generator.
+ o HMAC-SHA256 verification of the library on load.
  o MD5 is included for TLS purposed but cannot be used by the high level
    hashing functions.
  o All ciphers except AES are disabled.
