--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,12 @@ appends data to client hello if the expected size is in the
 
 * libgnutls: Allow deleting multiple non-certificate data.
 
+** libgnutls: When a PKCS #11 trust store is specified (e.g. using the
+configure option --with-default-trust-store-pkcs11), then the PKCS #11
+token is used on demand to obtain the trusted anchors, rather than
+preloading all trusted certificates. That allows CA certificate management
+to occur outside the process boundaries.
+
 ** p11tool: Added --so-login option to force login as security
 officer (admin).
 
