--- a/NEWS
+++ b/NEWS
@@ -49,10 +49,10 @@ option enables:
 ** API and ABI modifications:
 gnutls_privkey_generate: Added
 gnutls_fips140_mode_enabled: Added
-gnutls_digest_self_test: Added
-gnutls_mac_self_test: Added
-gnutls_pk_self_test: Added
-gnutls_cipher_self_test: Added
+gnutls_digest_self_test: Added (conditionally)
+gnutls_mac_self_test: Added (conditionally)
+gnutls_pk_self_test: Added (conditionally)
+gnutls_cipher_self_test: Added (conditionally)
 
 
 * Version 3.2.6 (released 2013-10-31)
