--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,11 @@ token is used on demand to obtain the trusted anchors, rather than
 preloading all trusted certificates. That delegates CA certificate management
 and blacklist checking to the PKCS #11 module.
 
+** libgnutls: When a PKCS #11 trust store is specified in configure option
+or in gnutls_x509_trust_list_add_trust_file(), then the module is used
+to obtain the verification anchors and any required blacklists as in
+http://p11-glue.freedesktop.org/doc/storing-trust-policy/storing-trust-pkcs11.html
+
 ** p11tool: Added --so-login option to force login as security
 officer (admin).
 
