--- a/NEWS
+++ b/NEWS
@@ -48,6 +48,7 @@ option enables:
 
 ** API and ABI modifications:
 gnutls_privkey_generate: Added
+gnutls_pkcs11_crt_is_known: Added
 gnutls_fips140_mode_enabled: Added
 gnutls_digest_self_test: Added (conditionally)
 gnutls_mac_self_test: Added (conditionally)
