--- a/NEWS
+++ b/NEWS
@@ -70,6 +70,7 @@ option enables (when running on FIPS140-enabled system):
 gnutls_privkey_generate: Added
 gnutls_pkcs11_crt_is_known: Added
 gnutls_fips140_mode_enabled: Added
+gnutls_sec_param_to_symmetric_bits: Added
 gnutls_digest_self_test: Added (conditionally)
 gnutls_mac_self_test: Added (conditionally)
 gnutls_pk_self_test: Added (conditionally)
