--- a/NEWS
+++ b/NEWS
@@ -49,8 +49,7 @@ a fork is detected.
 ** libgnutls: Added --enable-fips140-mode configuration option. That
 option enables (when running on FIPS140-enabled system):
  o DSA and DH key generation as in FIPS-186-4 (using provable primes)
- o The DRBG-AES deterministic random generator from ANSI X9.31 
-   Appendix A.2.4.
+ o The DRBG-CTR-AES256 deterministic random generator from SP800-90A.
  o Self-tests on initialization on ciphers/MACs, public key algorithms 
    and the random generator.
  o HMAC-SHA256 verification of the library on load.
