--- a/NEWS
+++ b/NEWS
@@ -70,6 +70,9 @@ gnutls_privkey_generate: Added
 gnutls_pkcs11_crt_is_known: Added
 gnutls_fips140_mode_enabled: Added
 gnutls_sec_param_to_symmetric_bits: Added
+gnutls_privkey_get_pk_ecc_raw: Added
+gnutls_privkey_get_pk_dsa_raw: Added
+gnutls_privkey_get_pk_rsa_raw: Added
 gnutls_digest_self_test: Added (conditionally)
 gnutls_mac_self_test: Added (conditionally)
 gnutls_pk_self_test: Added (conditionally)
