--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ Copyright (C) 2000-2012 Free Software Foundation, Inc.
 Copyright (C) 2013 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
-* Version 3.2.9 (unreleased)
+* Version 3.2.9 (released 2014-01-24)
 
 ** libgnutls: The %DUMBFW option in priority string only
 appends data to client hello if the expected size is in the
