--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.1.19 (unreleased)
+* Version 3.1.19 (released 2014-01-24)
 
 ** libgnutls: Fix in OCSP certificate status extension handling
 in non-blocking servers. Patch by Nils Maier.
