--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,15 @@ Copyright (C) 2000-2012 Free Software Foundation, Inc.
 Copyright (C) 2013 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
+* Version 3.2.10 (unreleased)
+
+** libgnutls: When obtaining usage statistics for the random generator
+use RUSAGE_THREAD to prevent getrusage() becoming bottleneck.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.2.9 (released 2014-01-24)
 
 ** libgnutls: The %DUMBFW option in priority string only
